# socket-internet-radio

./: AudioStreamer.cpp  AudioStreamer.h  CMakeLists.txt  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  MusicPlayer.cpp  MusicPlayer.h  Packet.cpp  Packet.h  README.md  RadioWindow.cpp  RadioWindow.h  Request.cpp  bin  mainClient.cpp  mainServer.cpp
InternetRadioClient/: InternetRadioClient.sln
InternetRadioClient/ConsoleApp1/: Program.cs
InternetRadioClient/ConsoleApplication1/: ConsoleApplication1.csproj  Program.cs
InternetRadioClient/ConsoleApplication1/Properties/: AssemblyInfo.cs
InternetRadioClient/InternetRadioClient/: Program.cs  _Imports.razor
InternetRadioClient/InternetRadioClient/Pages/: Error.cshtml  Error.cshtml.cs  Index.razor  _Host.cshtml
InternetRadioClient/InternetRadioClient/Properties/: launchSettings.json
InternetRadioClient/InternetRadioClient/Services/: ConnectionService.cs
InternetRadioClient/InternetRadioClient/Shared/: MainLayout.razor  NavMenu.razor
InternetRadioClient/InternetRadioClient/wwwroot/: audio.js
InternetRadioClient/InternetRadioClientOld/: InternetRadioClientOld.csproj  Program.cs  _Imports.razor
InternetRadioClient/InternetRadioClientOld/Pages/: Index.razor
InternetRadioClient/InternetRadioClientOld/Properties/: launchSettings.json
InternetRadioClient/InternetRadioClientOld/Services/: ConnectionService.cs
InternetRadioClient/InternetRadioClientOld/Shared/: NavMenu.razor
InternetRadioClient/InternetRadioClientOld/wwwroot/: index.html
InternetRadioServer/: AudioStreamer.cpp  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  Request.h  main.cpp
InternetRadioServer/audio/: convert.sh
